# m3m

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  m3m_encoder_bert_to_inference_ready_save.py  pyproject.toml
.ipynb_checkpoints/: docker-compose-checkpoint.yaml
app/: config.py  main.py
app/.ipynb_checkpoints/: main-checkpoint.py
app/kgqa/: act_selection.py  entity_linking.py  graph2text.py  m3m.py  mgenre.py  ner.py  seq2seq.py  utils.py
app/kgqa/.ipynb_checkpoints/: m3m-checkpoint.py
app/kgqa/utils/: graph_viz.py  utils.py
app/models/: base.py
app/pipelines/: act_selection.py  m3m.py  seq2seq.py
app/templates/: base.html  graph_visualise.html  index.html  index.js  index_search.html  index_search_.html  search_bar.html
data/ner/: config.cfg  meta.json
data/ner/ner/: model  moves
data/ner/vocab/: strings.json
gap/: Dockerfile  main.py  requirements.txt  utils.py
gap/internal/: data_relations_as_nodes.py  infer.sh  run_gap.py
