[tool.poetry]
name = "kgqa-act-selection"
version = "0.1.0"
description = ""
authors = ["Mikhail Salnikov <Mikhail.Salnikov@skoltech.ru>"]
readme = "README.md"
packages = [{include = "kgqa_act_selection"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
transformers = "^4.25.1"
requests = "^2.28.2"
joblib = "^1.2.0"
torch = "^1.13.1"
sentencepiece = "^0.1.97"
protobuf = "^4.21.12"
pywikidata = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
