[tool.poetry]
name = "kgqa-act-selection"
version = "0.1.0"
description = ""
authors = ["Mikhail Salnikov <Mikhail.Salnikov@skoltech.ru>"]
readme = "README.md"
packages = [{include = "kgqa_act_selection"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
requests = "^2.28.2"
joblib = "^1.2.0"
sentencepiece = "^0.1.97"
protobuf = "^4.21.12"
pywikidata = "^0.1.6"
spacy = "^3.5.0"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.1"
torch = "^1.13.1"
transformers = "^4.26.1"
natasha = "^1.5.0"
wikidata = "^0.7.0"
graphviz = "^0.20.1"
networkx = "^3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
